--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   shared_preferences: ^2.2.3
   http: ^1.1.0
   material_symbols_icons: ^4.2719.0
+  camera: ^0.11.0+1
+  path_provider: ^2.1.2
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
